--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Have a chat and type commands",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bulma": "^0.7.5",
-    "dotenv": "^8.1.0",
-    "ejs": "^2.7.1",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "mongodb": "^3.3.2",
-    "socket.io": "^2.2.0",
+    "npm": "^6.14.5",
+    "socket.io": "^2.3.0",
     "uuid-token-generator": "^1.0.0"
   },
   "devDependencies": {
@@ -26,6 +28,6 @@
     "terminal",
     "websockets"
   ],
-  "author": "SpleefDinamix",
+  "author": "ptaushanov",
   "license": "MIT"
 }
